# fast_api_zero

./: README.md  pyproject.toml
fast_api_zero/: app.py
tests/: test_app.py
